# fds-py-nb

./: .gitignore  README.md  _quarto.yml  funs.py  notebook01a.qmd  notebook01b.qmd  notebook02a.qmd  notebook02b.qmd  notebook02c.qmd  notebook02d.qmd  notebook03a.qmd  notebook03b.qmd  notebook03c.qmd  notebook03d.qmd  notebook03e.qmd  notebook04a.qmd  notebook04b.qmd  notebook04c.qmd  notebook04d.qmd  notebook05a.qmd  notebook05b.qmd  notebook06a.qmd  notebook06b.qmd  notebook07a.qmd  notebook07b.qmd  notebook08a.qmd  notebook08b.qmd  notebook09a.qmd  notebook09b.qmd  notebook10a.qmd  notebook10b.qmd  notebook11a.qmd  notebook11b.qmd  notebook12a.qmd  notebook12b.qmd  notebook13a.qmd  notebook13b.qmd  notebook14a.qmd  notebook14b.qmd  notebook15a.qmd  (+14 more)
docs/: index.html  notebook01a.html  notebook01b.html  notebook02a.html  notebook02b.html  notebook02c.html  notebook02d.html  notebook03a.html  notebook03b.html  notebook03c.html  notebook03d.html  notebook03e.html  notebook04a.html  notebook04b.html  notebook04c.html  notebook04d.html  notebook05a.html  notebook05b.html  notebook06a.html  notebook06b.html  notebook07a.html  notebook07b.html  notebook08a.html  notebook08b.html  notebook09a.html  notebook09b.html  notebook10a.html  notebook10b.html  notebook11a.html  notebook11b.html  notebook12a.html  notebook12b.html  notebook13a.html  notebook13b.html  notebook14a.html  notebook14b.html  notebook15a.html  notebook15b.html  notebook16a.html  notebook16b.html  (+9 more)
nb/: notebook01a.ipynb  notebook01b.ipynb  notebook02a.ipynb  notebook02b.ipynb  notebook02c.ipynb  (+42 more)
(+5 files in other folders)
