[project]
name = "fda-py-nb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "datasets>=4.4.2",
    "duckdb>=1.4.3",
    "folium>=0.20.0",
    "gensim>=4.4.0",
    "geopandas>=1.1.2",
    "igraph>=1.0.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "mizani>=0.14.3",
    "openai>=2.14.0",
    "opencv-python>=4.12.0.88",
    "pip>=25.3",
    "plotnine>=0.15.2",
    "polars>=1.36.1",
    "protobuf>=6.33.2",
    "pyyaml>=6.0.3",
    "requests-cache>=1.2.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "statsmodels>=0.14.6",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "ultralytics>=8.3.248",
    "umap-learn>=0.5.9.post2",
]
